port: numen-api to Minecraft 1.20.4 on Forge (downward, loader swap)
Below 1.20.6 the loader is Forge (not NeoForge) and the toolchain is Java 17.
This replaces the neoforge subproject with a forge one and downports the
network layer to the pre-1.20.5 API.

Build machinery (Forge era):
- gradle.properties: MC 1.20.4, java_version 17, Fabric 0.92.1 / loader 0.15.3,
  drop neoforge/neoform knobs, add forge_version 49.0.19 + ranges
- settings.gradle: Forge + Sponge repos; include('forge') not neoforge
- common/build.gradle: NeoForge moddev -> Sponge VanillaGradle; mixin 0.8.5 /
  mixinextras 0.3.5
- buildSrc multiloader-common: Forge expandProps + META-INF/mods.toml; kept the
  slim apiJar + numen-api-* publishing so numen-core can still resolve it
- Gradle wrapper 9.2 -> 8.7 and fabric-loom-remap -> fabric-loom (both 9.2/loom
  1.14 require Java 21, incompatible with the Java-17 1.20.4 toolchain)

forge/ subproject: Forge @Mod entry + client + datagen + mixin + resources
(mods.toml, 4 META-INF/services providers, mixins json). Forge platform services:
- ForgePlatformHelper (ModList/FMLPaths/FMLEnvironment)
- ForgeNumenConfig (ForgeConfigSpec)
- ForgeBlockCapabilityReader (ForgeCapabilities item/fluid/energy, null + 6 faces)
- ForgeNetworkChannel (one SimpleChannel, per-id envelope routed by payload.id())

Network downport to 1.20.4 (no StreamCodec/RegistryFriendlyByteBuf/CustomPacketPayload.Type):
12 payloads + INetworkChannel + NumenNetwork + Fabric/Forge channels rewritten to
write(FriendlyByteBuf)/id() + static read(FriendlyByteBuf) decoder; ItemStack via
writeItem/readItem.

Java-17 downgrades in common: sealed switch -> if/instanceof (ConvoLog, NumenLlmClient,
NumenScreen); Math.clamp/Mth.clamp -> min/max; VertexConsumer.normal(Matrix3f);
CommonListenerCookie.createInitial(profile); PlayerList.load nullable CompoundTag;
SavedData save/load lose HolderLookup.Provider; mixins compatibilityLevel JAVA_17.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthrop